Fixed styling issues on Home page on mobile view

--- a/frontend/src/components/Footer/styles.css
+++ b/frontend/src/components/Footer/styles.css
@@ -44,7 +44,7 @@
          border-left: solid 1px rgba(144, 144, 144, 0.25);
          display: inline-block;
          list-style: none;
-         margin-left: 1.5em;
+         /* margin-left: 1.5em; */
          padding-left: 1.5em;
          text-decoration: underline;
       }
@@ -83,8 +83,8 @@
 
          #footer .footlinks li {
             border-left: 0;
-            display: block;
-            margin: 0;
+            display: inline;
+            margin: 0 0.75em;
             padding: 0;
             text-decoration: underline;
          }
